2006-01-16  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKToolbarPresentation.m (-loadUI): Updated to hide column headers 
    on GNUstep too.
    * PrebuiltTableView.gorm: Added (I have forgotten to commit it until then).

2006-01-16  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKToolbarPresentation.m (-unloadUI): Fixed switching from toolbar
    presentation to other ones, which has been broken on GNUstep until then.
    This bug was triggered by -setToolbarVisibility: call which is not needed
    in fact. That means table presentation is now usable
    in PreferencesKitExample.

2006-01-15  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKToolbarPresentation.m (-unloadUI): Fixed toolbar release which
    was leaking validation objects in activity (that resulted in segmentation
    fault).

2006-01-15  Quentin Mathe <qmathe@club-internet.fr>

    * Source/PKPreferencesController.m (-updateUIForPreferencePaneWithPath:): 
    Added a hack to avoid resigning first responder status with table 
    presentation when pane is switched (it eliminates flickering between
    blue and gray of the selection in table view).
    
2006-01-13  Quentin Mathe <qmathe@club-internet.fr>

    * Source/UKPluginsRegistry.m (-loadPluginForPath:): More comments. 
    Removed a possible condition for plugin reloading, which may be replaced 
    later by a schema conformance test.
    * Source/PKPrefPanesRegistry.m 
    (-loadPluginForPath:): New method extending its superclass counterpart. It
    includes code to retrieve NSPrefPaneLabelIcon and NSPrefPaneIconFile which
    are specific to preference pane plugins. Fixed prefs module missing label 
    and icon bug, they weren't loaded until the module has been selected; 
    it was related to the fact prefs modules have to be instantied to retrieve 
    them (their icon and label being not defined in a plist). Now prefs module
    is instantiated on loading.